--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<link rel="stylesheet" type="text/css" href="css/normalize.css">-->
     <link rel="stylesheet" type="text/css" href="css/public.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>首页</title>
@@ -37,7 +36,7 @@
                 </ul>
             </div>
         </div>
-        <div class="tbody">
+        <div class="in_tbody">
             <div class="containe">
                 <div class="logo">
                     <a href="index.html">
@@ -45,9 +44,13 @@
                     </a>
                 </div>
                 <div>
-                    <h1><img src="images/logo_title.png" alt=""></h1>
+                    <h1>
+                        <a href="index.html">
+                            <img src="images/logo_title.png" alt="">
+                        </a>
+                    </h1>
                     <form class="search">
-                        <input type="text" name="search" value="">
+                        <input type="text" name="search" value="电饭煲">
                         <button>搜索</button>
                     </form>
                 </div>
@@ -60,7 +63,7 @@
         <div class="nav">
             <div class="containe">
                 <div class="menu">
-                    <h2 class="active">所有产品分类 <img src="images/arrows_icon.png" alt=""></h2>
+                    <h2>所有产品分类 <img src="images/arrows_icon2.png" alt=""></h2>
                     <ul class="submenu">
                         <li>
                             <h3>厨房小电</h3>
