--- a/com_details.html
+++ b/com_details.html
@@ -36,24 +36,6 @@
                 </ul>
             </div>
         </div>
-        <!--<div class="tbody">
-            <div class="containe">
-                <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo02.png" alt="文的电器">
-                    </a>
-                </div>
-                <h1>
-                    <a href="index.html"><img src="images/logo_title02.png" alt=""></a>
-                </h1>
-                <div>
-                    <form class="search">
-                        <input type="text" name="search" value="电饭煲">
-                        <button>搜索</button>
-                    </form>
-                </div>
-            </div>
-        </div>-->
         <div class="in_tbody">
             <div class="containe">
                 <div class="logo">
@@ -180,12 +162,128 @@
         </div>
     </div>
     <div id="middle">
-        <ul class="addr">
+        <ul class="crumbs">
             <li><a href="shop_list.html">厨房小电></a></li>
             <li><a href="shop_list.html">电饭锅></a></li>
             <li><a href="com_details.html">文的CFXB40FC8040-75</a></li>
         </ul>
-        <div class="containe"></div>
+        <div class="containe">
+            <div class="section_top">
+                <div class="pro_img">
+                    <a href="images/pro3_1.png">
+                        <img src="images/pro3_1.png" alt="">
+                    </a>
+                    <div class="img_wrap">
+                        <ul>
+                            <li><img src="images/pro3_1_1.png"></li>
+                            <li><img src="images/pro3_1_2.png"></li>
+                            <li><img src="images/pro3_1_3.png"></li>
+                        </ul>
+                        <span class="prev"><img src="images/prev_icon.png" alt=""></span>
+                        <span class="next"><img src="images/next_icon_on.png" alt=""></span>
+                    </div>
+                </div>
+                <div class="details">
+                    <h2>文的电饭煲&nbsp;&nbsp;电饭锅&nbsp;&nbsp;4L容量全景视窗 一键柴火饭CFXB40FC8040-75</h2>
+                    <p>【文的】4L容量，7段聪明大火力，米饭Q弹饱满，远红外陶晶加厚内胆，加热均匀不粘耐用，时尚金属机身【4月13-14日钜惠日好礼送不停】点击了解>></p>
+                    <div class="price">
+                        <p>价格<span>￥399.00</span></p>
+                        <p>促销价<span>￥299.00</span></p>
+                    </div>
+                    <ul>
+                        <li>月销量：<span>325</span></li>
+                        <li>累计销量：<span>25263</span></li>
+                        <li>累计评价：<span>18920</span></li>
+                        <li>文的积分：<span>20</span></li>
+                    </ul>
+                    <div class="color">
+                        <h3>颜色分类</h3>
+                        <ul>
+                            <li><img src="images/pro3_1_1.png" alt=""></li>
+                        </ul>
+                    </div>
+                    <div class="count">
+                        <h3>数量</h3>
+                        <input type="text" value="1">
+                        <span>
+                            <button>+</button>
+                            <button>-</button>
+                        </span>
+                    </div>
+                    <div class="shopping">
+                        <a href="#">立即购买</a>
+                        <a href="#" class="shoppingcart">加入购物车</a>
+                        <a href="#">加入收藏</a>
+                    </div>
+                    <div class="service">
+                        <h3>服务承诺</h3>
+                        <ul>
+                            <li>全国联保</li>
+                            <li>正品保证</li>
+                            <li>只换不修</li>
+                            <li>T2极速退款</li>
+                            <li>赠运费险</li>
+                            <li>七天无理由退换</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="shop_area">
+                <form class="shop_search">
+                    <input type="text" value="搜本店">
+                    <button><img src="images/search_icon2.png"></button>
+                </form>
+                <ul class="menu">
+                    <li>商品详情</li>
+                    <li>累计评价（<span>17856</span>）</li>
+                </ul>
+            </div>
+            <div class="section_bottom">
+                <div class="sidebar">
+                    <div class="local_search">
+                        <h3>店内搜索</h3>
+                        <form>
+                            <label for="keyword">关键字：</label>
+                            <input type="text" id="keyword" />
+                            <label for="begin">价格：</label>
+                            <input type="text" id="begin" />
+                            <label for="end">到</label>
+                            <input type="text" id="end" />
+                            <a href="#">搜索</a>
+                        </form>
+                    </div>
+                </div>
+                <div class="custom_service">
+                    <h3>客服中心</h3>
+                    <h5>工作时间</h5>
+                    <span>周一至周五 9:00-18:00</span>
+                    <span>周六至周日 8:30-24:00</span>
+                    <span>客服电话：400 880 6638</span>
+                </div>
+                <div class="hot_ad">
+                    <h3>店内热销</h3>
+                    <ul>
+                        <li>
+                            <a href="shop_list.html"><img src="images/pro4.png" alt=""></a>
+                            <p>1热销<span>17689</span>件<span>￥299.00</span></p>
+                        </li>
+                        <li>
+                            <a href="shop_list.html"><img src="images/pro5.png" alt=""></a>
+                            <p>1热销<span>17689</span>件<span>￥299.00</span></p>
+                        </li>
+                        <li>
+                            <a href="shop_list.html"><img src="images/pro8.png" alt=""></a>
+                            <p>1热销<span>17689</span>件<span>￥299.00</span></p>
+                        </li>
+                        <li>
+                            <a href="shop_list.html"><img src="images/pro8.png" alt=""></a>
+                            <p>1热销<span>17689</span>件<span>￥299.00</span></p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="main"></div>
+            </div>
+        </div>
     </div>
     <div id="footer">
         <ul class="footer_head">
