--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/public.css">
     <link rel="stylesheet" type="text/css" href="css/login.css">
-    <title>管理收货地址</title>
+    <title>登录</title>
 </head>
 
 <body>
@@ -69,12 +69,14 @@
                 </div>
                 <div class="pwd">
                     <label for="pwd"><img src="images/pwd_icon.png" alt=""></label>
-                    <input type="text" id="pwd" name="loginname" value="密码">
+                    <input type="text" id="pwd" name="pwd" value="密码">
                 </div>
                 <div class="yicon">
                     <input type="text" name="yicon" value="验证码">
-                    <span><img src="images/yzm1.png" alt="bcsm"></span>
-                    <span>看不清，换一张</span>
+                    <span><img src="images/yzm1.png" alt="bcsm">
+                    </span>
+                    <span>
+                    看不清，换一张</span>
                 </div>
                 <input type="submit" value="登录" id="login">
             </form>
