真商品详情

--- a/com_details.html
+++ b/com_details.html
@@ -287,7 +287,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="main">
+                <div class="com_main">
                     <h3>商品评价</h3>
                     <div class="summary">
                         <div class="grade">
