--- a/pay_failure.html
+++ b/pay_failure.html
@@ -166,20 +166,20 @@
                 <h2>结算页</h2>
                 <ul class="progressbar">
                     <li class="done">
-                        <a href="shop_cart.html">1</a>
-                        <a href="shop_cart.html">1.我的购物车</a>
+                        <span>1</span>
+                        <h5>1.我的购物车</h5>
                     </li>
                     <li class="done">
-                        <a href="confirm_order.html">2</a>
-                        <a href="confirm_order.html">2.核对定单信息</a>
+                        <span>2</span>
+                        <h5>2.核对定单信息</h5>
                     </li>
                     <li class="on">
-                        <a href="pay_failure.html">3</a>
-                        <a href="pay_failure.html">3.确认支付</a>
+                        <span>3</span>
+                        <h5>3.确认支付</h5>
                     </li>
                     <li>
-                        <a href="javascript:void(0)">4</a>
-                        <a href="javascript:void(0)">4.确认收货</a>
+                        <span>4</span>
+                        <h5>4.确认收货</h5>
                     </li>
                 </ul>
             </div>
