--- a/user.html
+++ b/user.html
@@ -224,7 +224,7 @@
                                 <span class="to_mylove">移到我的收藏</span>
                                 <span class="attention">加到我的关注</span>
                             </div>
-                            <em>带发货</em>
+                            <em>待发货</em>
                         </li>
                         <li>
                             <div>
@@ -245,7 +245,7 @@
                                 <span class="to_mylove">移到我的收藏</span>
                                 <span class="attention">加到我的关注</span>
                             </div>
-                            <em>带发货</em>
+                            <em>待发货</em>
                         </li>
                     </ul>
                 </div>
