--- a/pro_details.html
+++ b/pro_details.html
@@ -211,12 +211,12 @@
                         <input id="count" type="text" value="1">
                         <span>
                             <button class="add">+</button>
-                            <button class="minus">-</button>
+                            <button class="down">-</button>
                         </span>
                     </div>
                     <div class="shopping">
                         <a href="#">立即购买</a>
-                        <a href="#" class="shoppingcart">加入购物车</a>
+                        <a href="javascript:void(0)" class="shoppingcart">加入购物车</a>
                         <a href="javascript:void(0)" class="add_love"><img src="images/love_icon.png" alt="">加入收藏</a>
                     </div>
                     <div class="service">
