粗糙的购物车

--- a/shop_cart.html
+++ b/shop_cart.html
@@ -177,8 +177,8 @@
                 </div>
                 <ul class="title">
                     <li class="all_select">
-                        <span></span>
-                        <input type="checkbox">
+                        <span class="boxchecked"></span>
+                        <input type="checkbox" checked>
                         <h3>全选</h3>
                     </li>
                     <li>商品</li>
@@ -401,8 +401,8 @@
                     <div class="result">
                         <div class="handler">
                             <div class="all_select">
-                                <span></span>
-                                <input type="checkbox" name="userdeal" checked="" id="userdeal">
+                                <span class="boxchecked"></span>
+                                <input type="checkbox" checked>
                                 <h3>全选</h3>
                             </div>
                             <span class="del_check">删除选中产品</span>
