--- a/order_details.html
+++ b/order_details.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/public.css">
-    <link rel="stylesheet" type="text/css" href="css/comment.css">
-    <title>商品评价</title>
+    <link rel="stylesheet" type="text/css" href="css/order_details.css">
+    <title>订单详情</title>
 </head>
 
 <body>
@@ -159,99 +159,154 @@
         <ul class="crumbs">
             <li><a href="index.html">首页></a></li>
             <li><a href="user.html">我的文的></a></li>
-            <li><a href="comment.html">商品评价</a></li>
+            <li><a href="order.html">订单中心></a></li>
+            <li><a href="order_details.html">订单详情</a></li>
         </ul>
         <div class="containe">
-            <h2>商品评价</h2>
-            <ul class="title">
-                <li>商品</li>
-                <li>商品编号</li>
-                <li>商品数量</li>
-                <li>购买时间</li>
-                <li>评价状态</li>
-            </ul>
-            <ul class="pro_list">
-                <li>
-                    <div>
-                        <a href="pro_details.html">
-                            <img src="images/pro3_1_1.png" alt="">
-                        </a>
-                        <div>
-                            <a href="pro_details.html">苏泊尔（SUPOR）电饭煲 电饭锅 4L容量全景视窗 一键柴火饭</a>
-                            <p><img src="images/7_icon.png" alt="">支持7天无理由退货</p>
-                            <p><img src="images/bao_icon.png" alt="">选廷保</p>
-                        </div>
-                    </div>
-                    <span>1057573</span>
-                    <span>1</span>
-                    <span>2017-02-15</span>
-                    <span><a href="comment.html">发表评价</a></span>
-                </li>
-            </ul>
-            <div class="summary">
-                <h3>累计评价（17856）</h3>
-                <div class="grade">
-                    <h5>好评度</h5>
-                    <span>97<i>%</i></span>
+            <div class="order_status">
+                <div>
+                    <p class="order_num">订单号：<span>39690003263</span></p>
+                    <h3>完成</h3>
                 </div>
-                <ul>
-                    <li>电饭煲不错(2305)</li>
-                    <li>外观漂亮(1525)</li>
-                    <li>内胆不错(1305)</li>
-                    <li>煮饭速度快(977)</li>
-                    <li>煮的饭很香(2134)</li>
-                    <li>一般(125)</li>
-                    <li>功能多(957)</li>
-                    <li>使用方便(1368)</li>
-                    <li>预约功能(778)</li>
-                    <li>还可以吧(362)</li>
-                </ul>
+                <div>
+                    <h5>订单已经完成，感谢您在京东商城购物，欢迎您对本次交易及所购商品进行评价</h5>
+                    <ul>
+                        <li>
+                            <span>提交订单</span>
+                            <span class="date">2016-10-16</span>
+                            <span class="time">20:23:52</span>
+                            <i></i></li>
+                        <li><span>付款成功</span>
+                            <i></i></li>
+                        <li>
+                            <span>商品出库</span>
+                            <span class="date">2016-10-16</span>
+                            <span class="time">21:06:52</span>
+                            <i></i></li>
+                        <li>
+                            <span>等待收货</span>
+                            <span class="date">2016-10-17</span>
+                            <span class="time">04:13:51</span>
+                            <i></i></li>
+                        <li>
+                            <span>完成</span>
+                            <span class="date">2016-10-17</span>
+                            <span class="time">11:44:41</span>
+                        </li>
+                    </ul>
+                    <p>会员成长值<span>+41</span></p>
+                </div>
             </div>
-            <div class="edit_com">
-                <form>
-                    <div class="grading">
-                        <label><span>*</span>评分：</label>
-                        <div class="describe">
-                            <h6>与描述相符</h6>
+            <div class="ad_info">
+                <div>
+                    <a href="pro_details.html"><img src="images/pro1o.png" alt=""></a>
+                    <p>送货方式：<span>普通快递</span></p>
+                </div>
+                <div>
+                    <h3>物流信息</h3>
+                    <ul>
+                        <li>快递公司：<span>中通</span></li>
+                        <li>运单号码：<span>414846710646</span></li>
+                        <li>
+                            <h5>物流跟踪：</h5>
                             <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>2016-10-17 14:16:29您的订单由第三方卖家拣货完毕，待出库交付中通速递，运单号为414846710646</li>
+                                <li>2016-10-17 14:12:09第三方卖家已经开始拣货</li>
+                                <li>2016-10-16 20:25:07您的订单已进入第三方卖家库房，准备出库</li>
+                                <li>2016-10-16 20:23:52您提交了订单，请等待第三方卖家系统确认</li>
                             </ul>
-                            <input type="hidden" value='0' name="describe" />
-                        </div>
-                        <div class="mer_serve">
-                            <h6>商家服务</h6>
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                            <input type="hidden" value='0' name="mer_serve" />
-                        </div>
-                        <div class="log_serve">
-                            <h6>物流服务</h6>
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                            <input type="hidden" value='0' name="log_serve" />
-                        </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="user_site">
+                <dl>
+                    <dt>收货人信息</dt>
+                    <dd>
+                        <h6>收货人：</h6><span>罗小迪</span></dd>
+                    <dd>
+                        <h6>地址：</h6><span>湖北省武汉市洪山区关山鲁磨路联峰广场1203多迪</span></dd>
+                    <dd>
+                        <h6>手机号码：</h6><span>188****7783</span></dd>
+                </dl>
+                <dl>
+                    <dt>配送信息</dt>
+                    <dd>
+                        <h6>配送方式：</h6><span>普通快递</span></dd>
+                    <dd>
+                        <h6>运费：</h6><span>¥0.00</span></dd>
+                </dl>
+                <dl>
+                    <dt>付款信息</dt>
+                    <dd>
+                        <h6>付款方式：</h6><span>在线支付</span></dd>
+                    <dd>
+                        <h6>商品总额：</h6><span>¥42.50</span></dd>
+                    <dd>
+                        <h6>应支付金额：</h6><span>¥42.50</span></dd>
+                    <dd>
+                        <h6>运费金额：</h6><span>¥0.00</span></dd>
+                    <dd>
+                        <h6>优惠券：</h6><span>¥0.00</span></dd>
+                    <dd>
+                        <h6>订单优惠：</h6><span>¥0.00</span></dd>
+                </dl>
+                <dl>
+                    <dt>发票信息</dt>
+                    <dd>
+                        <h6>发票类型：</h6><span>普通发票</span></dd>
+                    <dd>
+                        <h6>发票抬头：</h6><span>个人</span></dd>
+                    <dd>
+                        <h6>发票内容：</h6><span>明细</span></dd>
+                </dl>
+            </div>
+            <div class="pro_info">
+                <h3>苏泊尔的旗舰店</h3>
+                <div class="list">
+                    <ul class="title">
+                        <li>商品</li>
+                        <li>商品编号</li>
+                        <li>文的价</li>
+                        <li>商品数量</li>
+                        <li>操作</li>
+                    </ul>
+                    <ul class="pro_list">
+                        <li>
+                            <div>
+                                <a href="pro_details.html">
+                                    <img src="images/pro3_1_1.png" alt="">
+                                </a>
+                                <div>
+                                    <a href="pro_details.html">苏泊尔（SUPOR）电饭煲 电饭锅 4L容量全景视窗 一键柴火饭</a>
+                                    <p><img src="images/7_icon.png" alt="">支持7天无理由退货</p>
+                                    <p><img src="images/bao_icon.png" alt="">选廷保</p>
+                                </div>
+                            </div>
+                            <span>1057573</span>
+                            <span>1</span>
+                            <span>2017-02-15</span>
+                            <span>
+                                <a href="javascript:void(0)">申请售后</a>
+                                <a href="confirm_order.html">立即购买</a>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="result">
+                    <div>
+                        <h6>商品总额：</h6>
+                        <span>¥299.00</span>
                     </div>
-                    <div class="com_txt">
-                        <label><span>*</span>详细说明：</label>
-                        <textarea name="com_txt"></textarea>
+                    <div>
+                        <h6>运&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;费：</h6>
+                        <span>¥0.00</span>
                     </div>
-                    <span>10-500字</span>
-                    <input type="submit" value="提交评价" class="sub" />
-                </form>
+                    <div class="all_price">
+                        <h6>应付总额：</h6>
+                        <span>¥299.00</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -333,7 +388,6 @@
     </div>
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/public.js"></script>
-    <script src="js/comment.js"></script>
 </body>
 
 </html>
