--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="yicon">
                     <input type="text" name="yicon" value="验证码">
-                    <span><img src="images/yzm1.png" alt="bcsm">
+                    <span class="yimg"><img src="images/yzm1.png" alt="bcsm">
                     </span>
                     <span>
                     看不清，换一张</span>
