--- a/register.html
+++ b/register.html
@@ -83,7 +83,7 @@
                 <div class="yicon">
                     <label for="yicon">验证码：</label>
                     <input type="text" name="yicon" id="yicon" value="验证码">
-                    <span><img src="images/yzm1.png" alt="bcsm">
+                    <span class="yimg"><img src="images/yzm1.png" alt="bcsm">
                     </span>
                     <span>
                     看不清，换一张</span>
